# InstaLooter

./: .coveragerc  .gitignore  .travis.yml  CHANGELOG.rst  MANIFEST.in  README.rst  fetch_mult_organize.py  fetch_multiple_accounts_organize.py  fetch_multiple_organize.py  instaLooter.py  loot_hashtag.py  requirements-doc.txt  requirements-metadata.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
ci/travis/: before_script.sh
docs/: ISSUE_TEMPLATE.md  Makefile  requirements.txt
docs/source/: api.rst  batch.rst  conf.py  cron.rst  examples.rst  index.rst  install.rst  usage.rst
docs/source/instalooter/: batch.rst  cli.rst  index.rst  looters.rst  medias.rst  pages.rst  pbar.rst  worker.rst
instaLooter/: __init__.py  __main__.py  batch.py  cli.py  core.py  looter.py  pbar.py  tor_manager.py  urlgen.py  utils.py  worker.py
instaLooter/_utils/: contexts.py  cookies.py  namegen.py
instaLooter/cli/: __init__.py  _main.py
instaLooter/cli/_utils/: console.py  constants.py  login.py  threadutils.py  time.py
instaLooter/iterators/: medias.py  pages.py
instalooter/: __init__.py  __main__.py  _impl.py  _uadetect.py  _utils.py  batch.py  cli.py  looter.py  looters.py  medias.py  pages.py  pbar.py  worker.py
instalooter/_cli/: __init__.py  console.py  constants.py  login.py  threadutils.py  time.py
instalooter/_utils/: backports.py  libs.py
instalooter/cli/: __init__.py  _main.py  console.py  constants.py  login.py  logutils.py  threadutils.py  time.py
instalooter/cli/_utils/: constants.py
instalooter/iterators/: __init__.py  pages.py
instalooter/static/: splash.html
tests/: __init__.py  test_batch.py  test_cli.py  test_instaLooter.py  test_issues.py  test_login.py  test_looter.py  test_pbar.py  test_urlgen.py  test_utils.py  test_utils_cli.py
tests/utils/: __init__.py  ig_mock.py  method_names.py
