[metadata]
name = instaLooter
version = attr: instaLooter.__version__
author = Martin Larralde
author-email = martin.larralde@ens-paris-saclay.fr
home-page = https://github.com/althonos/instaLooter
description = Another API-less Instagram pictures and videos downloader
long-description = file: README.rst
license = GPLv3
platform = any
keywords = instagram, download, web, web scraping, looter
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Internet
    Topic :: Software Development :: Libraries :: Python Modules
    Operating System :: OS Independent

[options]
zip_safe = true
include_package_data = true
python_requires = >= 2.7, != 3.0.*, != 3.1.*, != 3.2.*
packages = instaLooter
test_suite = tests
install_requires =
    six ~=1.4
    beautifulsoup4 ~=4.4
    progressbar2 ~=3.1
    requests ~=2.18
    docopt ~=0.4
    python-dateutil ~=2.1
    hues >=0.2.2, <1
tests_require =
    instaLooter[alldev]

[options.entry_points]
console_scripts =
    instaLooter = instaLooter:main

[options.extras_require]
metadata =
    piexif
    Pillow
test =
    green
    coverage
    codecov
    codacy-coverage
    %(metadata)s
doc =
    sphinx
    sphinxjp.themes.basicstrap
all =
    %(metadata)s
alldev =
    %(metadata)s %(test)s %(doc)s

[bdist_wheel]
universal=1

[coverage:report]
exclude_lines =
    pragma: no cover
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:
    except ImportError
    if six.PY2:
    if six.PY3:

[coverage:run]
branch=True

[green]
file-pattern = test_*.py
verbose = 2
no-skip-report = true
quiet-stdout = true
run-coverage = true
