[metadata]
name = instalooter
version = attr: instalooter.__version__
author = Martin Larralde
author-email = martin.larralde@ens-paris-saclay.fr
home-page = https://github.com/althonos/instalooter
description = Another API-less Instagram pictures and videos downloader
long-description = file: README.rst
license = GPLv3+
license-file = COPYING
platform = any
keywords = instagram, download, web, web scraping, looter
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Internet
    Topic :: Software Development :: Libraries :: Python Modules
    Operating System :: OS Independent

[options]
zip_safe = true
include_package_data = true
python_requires = >= 2.7, != 3.0.*, != 3.1.*, != 3.2.*
packages = find:
test_suite = tests
install_requires =
    coloredlogs ~=9.0
    python-dateutil ~=2.1
    docopt ~=0.4
    fs ~=2.0.9
    requests ~=2.18
    six ~=1.4
    tqdm ~=4.19
    tenacity ~=4.9
tests_require =
    instalooter[test]

[options.entry_points]
console_scripts =
    instalooter = instalooter.cli:main
    instaLooter = instalooter.cli:main

[options.packages.find]
exclude =
    tests
    tests.utils

[options.extras_require]
# add EXIF metadata to downloaded pictures
metadata =
    piexif
    Pillow
# all features
all =
    %(metadata)s
# test dependencies
test =
    mock ~=2.0 ; python_version < '3.4'
    parameterized ~=0.6
    green ~=2.12
    %(metadata)s
# coverage dependencies
coverage =
    coverage
    codecov
    codacy-coverage
# documentation dependencies
doc =
    sphinx
    sphinx_bootstrap_theme
# development dependencies
dev =
    docutils
    Pygments
    %(test)s
    %(coverage)s

[bdist_wheel]
universal=1

[coverage:report]
exclude_lines =
    pragma: no cover
    raise AssertionError
    raise NotImplementedError
    return NotImplemented
    if 0:
    if __name__ == .__main__.:
    except ImportError
    if six.PY2:
    if six.PY3:

[coverage:run]
branch=True

[green]
file-pattern = test_*.py
verbose = 2
no-skip-report = true
quiet-stdout = true
run-coverage = true
processes = 1

[pydocstyle]
inherit = false
ignore = D100,D200,D203,D213,D406,D407
